objects/Diary_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Api_Log__c</fullName>
        <label>Api Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssigntoLoggedIn__c</fullName>
        <formula>Property_Insurance__r.AssignedToLoggedIn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssigntoLoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>DiaryNotes</relationshipLabel>
        <relationshipName>DiaryNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESB_API_Success_Error_Message__c</fullName>
        <label>Message returned from Jackson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoked_From_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoked From Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Insurance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property Insurance</label>
        <referenceTo>Property_Insurance__c</referenceTo>
        <relationshipLabel>DiaryNotes</relationshipLabel>
        <relationshipName>DiaryNotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <formula>Property_Insurance__r.Source_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_to_ESB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved in Jackson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Diary Notes</label>
    <nameField>
        <displayFormat>DNN-{0000}</displayFormat>
        <label>Diary Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiaryNotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PropertyInsuranceValidation</fullName>
        <active>true</active>
        <description>Property Insurance associated with the Diary Note must be assigned to the agent before creating the diary note.</description>
        <errorConditionFormula>IF(AND(Property_Insurance__r.OwnerId !=$User.Id,Invoked_From_Batch__c==False, Property_Insurance__r.Source_Name__c==&apos;MORTGAGE&apos;),True,False)</errorConditionFormula>
        <errorDisplayField>Api_Log__c</errorDisplayField>
        <errorMessage>Please assign the Property Insurance to yourself before creating the Diary Note.</errorMessage>
    </validationRules>
</CustomObject>